--- a/Last/last.html
+++ b/Last/last.html
@@ -15,40 +15,50 @@
 	<header>
 		<div id="header">
 			<div class="title">Sadie's Themes Application</div>
-		</div>
+		</div>	
 	</header>
 <main>
  	<div class="row">
 		<div class="col-lg-12 col-md-12">
   			<div id="intro">
-  				<p><span class="capital">Dearest Kota,</span><br>It's with considerable degree of enthusiasm that I am submitting this application to work with Shopify's lovely theme support team. Please enjoy the page that I've created here to let you know more about who I am, and why I'd be thrilled to work with you.</p>
+  				<p><span class="capital">Dearest Kota,</span><br>My name is Sadie, and I’m a guru at Shopify. I’ve had the pleasure of working alongside the  Shopifam for the past six months, and am lucky to be a part of this forward-thinking group of lovely people as the company continues to grow (and grow!) and change. It's with much enthusiasm that I am applying to work in Themes! Please enjoy the page that I've created here to let you know more about who I am, and why I would be thrilled to work with you.</p>
   			</div>
 		</div>
 
 		<div class="col-lg-4 col-md-6">
 			<div class="container">
-				<h5 class="p1">Passion</h5>
-				<p>Lorem ipsum dolor sit amet, duis dictum sit faucibus donec vel rhoncus, ante ac nulla a pellentesque porta lectus. Est eu leo. Nunc vel fermentum interdum ultricies!</p>
+				<h5 class="p1">Support</h5>
+				<p id="p1">Firstly, I LOVE helping people, and working in support has been a sure fire way to ensure I get my fill. Right from the start, one of my very favourite topics to support has been theme customizations: fun and sometimes super tricky puzzles that inevitably end up teaching me increasingly more about theme template design, frameworks, Liquid, Javascript, Ajax, JSON, and a whole lot more. Connecting with merchants helping them to realize the aesthetic or functionality that they need for their business is a rewarding process indeed.</p>
 			</div>
 		</div>	
 		
 		<div class="col-lg-4 col-md-6">
 			<div class="container">
-				<h5 class="p2">Themes</h5>
-				<p>Lorem ipsum dolor sit amet, duis dictum sit faucibus donec vel rhoncus, ante ac nulla a pellentesque porta lectus. Est eu leo. Nunc vel fermentum interdum ultricies!</p>
+				<h5 class="p2">Code</h5>
+				<p id="p2">I have been stoked about coding since before I started with Shopify, having declined acceptance to a university computer science degree program in favour of the exciting opportunity to work with a rapidly accelerating tech company with a track record of taking excellent care of its staff. Instead of going the route of formal education, I have been creating the time tap into the rich and extensive (if overwhelming) plethora of online educational resources. I’m so excited about the knowledge that I have amassed so far, and am eager to learn more and more (and more!). It’s invigorating to think about the creative and technical possibilities that will be unlocked one by one as my knowledge base continues to expand.</p>
 			</div>
 		</div>
   		
   		<div class="col-lg-4 col-md-12">
   			<div class="container">
-  				<h5 class="p3">Design</h5>
-  				<p>Lorem ipsum dolor sit amet, duis dictum sit faucibus donec vel rhoncus, ante ac nulla a pellentesque porta lectus. Est eu leo. Nunc vel fermentum interdum ultricies!</p>
+  				<h5 class="p3">Skills</h5>
+  				<p id="p3"><strong>So, what can I bring to the table? I am:</strong><br>
+  						   &hearts; Knowledgable about HTML5 and CSS3<br>
+  						   &hearts; Competent with jQuery (and have a lot of fun working with it, too!)<br>
+  						   &hearts; Experienced in modifying Shopify themes<br>
+  						   &hearts; Able to happily provide excellent customer service<br>
+  						   &hearts; Currently working with and learning more about Git<br>
+  						   &hearts; Familiar with Liquid<br>
+  						   &hearts; Stoked to be working with code<br>
+  						   &hearts; Creative and playful<br>
+  						   &hearts; A passionate and dedicated employee!</p>
   			</div>
 		</div>
 
 		<div class="col-lg-12 col-md-12">
   			<div id="intro">
-  				<p><span class="capital">Thank you so much!</span><br> I can't tell you how much I appreciate the time that you've put into scoping out and scrutinizing this application. I look forward to hearing back from you, and absolutely appreciate any and all feedback that you're able to offer. Have a delightful day! </p>
+  				<p id="thank-you-p"><span class="capital">Thank you so much!</span><br>This simple site was created without guidance or oversight. I am fully open to any and all feedback and criticism that you’re able to offer, and truly appreciate the time you’ve taken to look it over.  Have a delightful day! </p>
+  				<button id="thank-you-button">So, what do you think of my site?</button>
   			</div>
 		</div>
 </main>
