--- a/Last/index.html
+++ b/Last/index.html
@@ -21,7 +21,7 @@
  	<div class="row">
 		<div class="col-lg-12 col-md-12">
   			<div id="intro">
-  				<p><span class="capital">Dearest Kota,</span><br>My name is Sadie, and I’m a guru at Shopify. I’ve had the pleasure of working alongside the  Shopifam for the past six months, and am lucky to be a part of this forward-thinking group of lovely people as the company continues to grow (and grow!) and change. It's with much enthusiasm that I am applying to work in Themes! Please enjoy the page that I've created here to let you know more about who I am, and why I would be thrilled to work with you.</p>
+  				<p><span class="capital">Dearest Kota,</span><br>My name is Sadie, and I’m a guru here at Shopify. I’ve had the pleasure of working alongside the  Shopifam for the past six months, and am lucky to be a part of this forward-thinking group of lovely people as the company continues to grow (and grow!) and change. It's with much enthusiasm that I am applying to work in Themes! Please enjoy the page that I've created here to let you know more about who I am, and why I would be thrilled to work with you.</p>
   			</div>
 		</div>
 
@@ -35,7 +35,7 @@
 		<div class="col-lg-4 col-md-6">
 			<div class="container">
 				<h5 class="p2">Code</h5>
-				<p id="p2">I have been stoked about coding since before I started with Shopify, having declined acceptance to a university computer science degree program in favour of the exciting opportunity to work with a rapidly accelerating tech company with a track record of taking excellent care of its staff. Instead of going the route of formal education, I have been creating the time tap into the rich and extensive (if overwhelming) plethora of online educational resources. I’m so excited about the knowledge that I have amassed so far, and am eager to learn more and more (and more!). It’s invigorating to think about the creative and technical possibilities that will be unlocked one by one as my knowledge base continues to expand.</p>
+				<p id="p2">I have been stoked about coding since long before I started with Shopify. Having declined acceptance to a university computer science degree program in favour of the exciting opportunity to work with a rapidly accelerating tech company with a track record of taking excellent care of its staff, I relinquished the option of going the route of formal education, and am instead embracing the rich and extensive (if overwhelming) plethora of online educational resources. I’m so excited about the knowledge that I have amassed so far, and am eager to learn more and more (and more!). It’s invigorating to think about the creative and technical possibilities that will be unlocked one by one as my knowledge base continues to expand.</p>
 			</div>
 		</div>
   		
