--- a/Last/index.html
+++ b/Last/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="last.css">
 	<script type="text/javascript" src="jquery-3.0.0.js"></script>
 	<script type="text/javascript" src="last.js"></script>
+	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
 <div id="main-content">
