--- a/Last/index.html
+++ b/Last/index.html
@@ -36,7 +36,7 @@
 		<div class="col-lg-4 col-md-6">
 			<div class="container">
 				<h5 class="p2">Code</h5>
-				<p id="p2">I have been stoked about coding since long before I started with Shopify. Having declined acceptance to a university computer science degree program in favour of the exciting opportunity to work with a rapidly accelerating tech company with a track record of taking excellent care of its staff, I relinquished the option of going the route of formal education, and am instead embracing the rich and extensive (if overwhelming) plethora of online educational resources. I’m so excited about the knowledge that I have amassed so far, and am eager to learn more and more (and more!). It’s invigorating to think about the creative and technical possibilities that will be unlocked one by one as my knowledge base continues to expand.</p>
+				<p id="p2">I have been stoked about coding since long before I started with Shopify. Having declined acceptance to a university computer science degree program in favour of the exciting opportunity to work with a rapidly accelerating tech company with a track record of taking excellent care of its staff, I relinquished the option of formal education. Instead, I am embracing the rich and extensive (if overwhelming) plethora of online educational resources. I’m so excited about the knowledge that I have amassed so far, and am eager to learn more and more (and more!). It’s invigorating to think about the creative and technical possibilities that will be unlocked one by one as my knowledge base continues to expand.</p>
 			</div>
 		</div>
   		
